[package]
name = "codex-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.45", features = ["derive"] }
indicatif = "0.17.11"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
url = "2.5.7"
walkdir = "2.5.0"
which = "8.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
